--- a/ws-fe/src/index.css
+++ b/ws-fe/src/index.css
@@ -1,7 +1,18 @@
 @import "tailwindcss";
 
-@theme {
-  --color-purple-300: #e0e7fe;
-  --color-purple-500: #3e38a7;
-  --color-purple-600: #5046e4;
+@import "tailwindcss";
+
+/* Make sure root elements fill the full screen */
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* optional: prevent scrollbars if layout fits screen  */
+body {
+  background-color: #1a103c;
+  font-family: "Inter", sans-serif;
 }
